# sneat

./: Cargo.toml  README.md  build.rs  level_1.ron
.cargo/: config
.github/: build
.github/workflows/: build-release-macos.yml  build-release-windows.yml  build-release.yml  linter.yml
assets/sprite_configs/: barrel_spritesheet.ron  environment_spritesheet.ron  sneatling_spritesheet.ron
assets/sprites/: sneatling.ron
assets/sprites/environment/: readme.txt
config/: bindings.ron  display.ron
src/: constants.rs  helpers.rs  main.rs  sneat.rs  types.rs
src/assets/sprite_configs/: environment_spritesheet.ron  sneatling_spritesheet.ron  whale_config.ron
src/components/: animation.rs  barrel.rs  camera_focus.rs  collidee.rs  collider.rs  collides.rs  cover.rs  coverable.rs  covers.rs  edible.rs  floor.rs  health.rs  in_cover.rs  mod.rs  shape.rs  sneatling.rs  spit_travel.rs  velocity.rs
src/config/: display.ron
src/entities/: barrel.rs  camera.rs  camera_focus.rs  cover.rs  floor.rs  mod.rs  sneatling.rs
src/levels/: level_1.ron
src/resources/: assets.rs
src/systems/: animation_changing_system.rs  animation_system.rs  camera_system.rs  collision_system.rs  cover_system.rs  damage_system.rs  eating_system.rs  mod.rs  sneat_system.rs  sneatling_system.rs  spit_travel_system.rs  spitting_system.rs  velocity.rs
