[package]
name = "sneat"
version = "0.1.0"
authors = ["James Holman <jameswarringtonholman@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# windows dependencies (this is currently broken on stable and nightly, re-add in future)

# [target.x86_64-pc-windows-gnu.dependencies]
# amethyst = {version = "0.15.3", features = ["vulkan"]}

# [target.x86_64-unknown-linux.dependencies]
# amethyst = {version = "0.15.3", features = ["vulkan"]}
   

# regular dependencies
[dependencies]
amethyst = {version = "0.15.3", features = ["vulkan"]}
serde = { version = "1.0", features = ["derive"] }
ron = "*"
# amethyst = {version = "0.15.3", features = ["metal"]}
